--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - ./:/var/www/html
     command: php-fpm
     ports:
-      - 9000
+      - '9000'
     networks:
       - pokedot
 
@@ -34,7 +34,10 @@ services:
     working_dir: /var/www/html
     volumes:
       - ./:/var/www/html
-    entrypoint: 'npm run watch'
+    command: 'npm run watch'
+    ports:
+      - '3000:3000'
+      - '3001:3001'
     networks:
       - pokedot
 
