--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.3.0",
         "@inertiajs/inertia": "^0.9.1",
         "@inertiajs/inertia-vue3": "^0.4.2",
         "@inertiajs/progress": "^0.2.5",
